--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: RoundPorch Hobbies
 description: Not sure yet
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/dustinb/dustinb.github.io/master/dasher.png
+avatar: https://raw.githubusercontent.com/dustinb/dustinb.github.io/master/images/image.jpg
 
 #
 # Flags below are optional
